variables mixins for scss

--- a/src/styles/iconfont.scss
+++ b/src/styles/iconfont.scss
@@ -1,11 +1,12 @@
-@font-face {font-family: "iconfont";
-    src: url('//at.alicdn.com/t/font_2390282_ri40n5v8up.eot');
-  src: url('//at.alicdn.com/t/font_2390282_ri40n5v8up.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_2390282_ri40n5v8up.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_2390282_ri40n5v8up.woff') format('woff'),
-  url('//at.alicdn.com/t/font_2390282_ri40n5v8up.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_2390282_ri40n5v8up.svg#iconfont') format('svg');
-  }
+@font-face {
+  font-family: 'iconfont';  /* project id 2390282 */
+  src: url('//at.alicdn.com/t/font_2390282_xd6yx1l81rm.eot');
+  src: url('//at.alicdn.com/t/font_2390282_xd6yx1l81rm.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_2390282_xd6yx1l81rm.woff2') format('woff2'),
+  url('//at.alicdn.com/t/font_2390282_xd6yx1l81rm.woff') format('woff'),
+  url('//at.alicdn.com/t/font_2390282_xd6yx1l81rm.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_2390282_xd6yx1l81rm.svg#iconfont') format('svg');
+}
   
   .iconfont {
     font-family: "iconfont" !important;
